'commented downlaod resume option'

--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
     </a>
 
     <!-- Download Resume checkbox -->
-    <input type="checkbox" id="resume-check" onclick="downloadResume()" style="transform: scale(1.2); cursor:pointer;">
+    <!-- <input type="checkbox" id="resume-check" onclick="downloadResume()" style="transform: scale(1.2); cursor:pointer;">
     <label for="resume-check" style="cursor:pointer; color:var(--accent); font-size:14px;">
       Download Resume
     </label>
-  </div>
+  </div> -->
 
   <div style="margin-top:8px; text-align:center; color:var(--muted); font-size:13px;">
     This is copyrighted material. © Sai Vignesh S 2025.
