added tag for alignment

--- a/index.html
+++ b/index.html
@@ -205,8 +205,11 @@
   </div> -->
 
   <div style="margin-top:8px; text-align:center; color:var(--muted); font-size:13px;">
-    This is copyrighted material. © Sai Vignesh S 2025.
   </div>
+     <!-- <br><br><center>This is copyrighted material. © Sai Vignesh S 2025 .</center>  -->
+</footer>
+<footer style="text-align: center; margin-top: 20px;">
+    This is copyrighted material. © Sai Vignesh S 2025.
 </footer>
   </div>
   <script>
